# ESP32-Duke-Project

./: TransceiverSetup.code-workspace
Base/main/: CMakeLists.txt  main.c
Base/main/utils/AD5693/: ad5693_utils.h
Base/main/utils/ADC/: adc_utils.c
Base/main/utils/CAN/: can_config.h  can_driver_utils.c  can_driver_utils.h  can_transmit_utils.c
Base/main/utils/TempSensor/: temp_sensor.c  temp_sensor.h
DAC/: CMakeLists.txt
DAC/main/: main.c
DAC/main/utils/AD5693/: ad5693_utils.h
Debugger/: CLI_README.md  CLI_Usage_Examples.md  CMakeLists.txt
Debugger/TestCases/: external_commands.c  performance_commands.c  performance_commands.h  test_commands.c  test_commands.h
Debugger/main/: CMakeLists.txt  main.c
Debugger/main/utils/AD5693/: ad5693_utils.c
Debugger/main/utils/ADC/: adc_utils.h
Debugger/main/utils/CLI/: cli_commands.c  cli_commands.h  cli_interface.c  cli_interface.h
Debugger/main/utils/TempSensor/: temp_sensor.c
TempReceiver/: CMakeLists.txt
TempReceiver/main/: CMakeLists.txt  main.c
TempReceiver/main/utils/CAN/: can_config.h  can_driver_utils.c  can_receive_utils.c  can_receive_utils.h
TempTransmitter/: CMakeLists.txt
TempTransmitter/main/: CMakeLists.txt  main.c
TempTransmitter/main/utils/CAN/: can_config.h  can_driver_utils.c  can_receive_utils.h  can_transmit_utils.c  can_transmit_utils.h
main/: CMakeLists.txt  main.c
main/utils/CAN/: can_transmit_utils.h
