idf_component_register(SRCS 
                            "main.c"
                            "utils/ADC/adc_utils.c"
                            "utils/TempSensor/temp_sensor.c"
                            "utils/CAN/can_driver_utils.c"
                            "utils/CAN/can_transmit_utils.c"
                    INCLUDE_DIRS 
                            "." 
                            "utils/ADC" 
                            "utils/TempSensor"
                            "utils/CAN")